--- a/Android Application Development using Kotlin/app_motivation/app/src/main/AndroidManifest.xml
+++ b/Android Application Development using Kotlin/app_motivation/app/src/main/AndroidManifest.xml
@@ -10,17 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_motivation">
         <activity
-            android:name=".SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
