--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/gradle/wrapper/gradle-wrapper.properties
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Dec 10 12:09:08 BRT 2020
+#Sun Nov 13 14:04:18 BRT 2022
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-all.zip
+zipStoreBase=GRADLE_USER_HOME
