Add viewBinding on app_news_mvp

--- a/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news_mvp/app/build.gradle
+++ b/App News - Android + Kotlin + Retrofit + Coroutines + Room/app_news_mvp/app/build.gradle
@@ -7,6 +7,11 @@ plugins {
 }
 
 android {
+
+    viewBinding {
+        enabled = true
+    }
+
     namespace 'com.lvb.projects.app_news_mvp'
     compileSdk 33
 
