--- a/Android Development MVVM Architecture/app_notes/app/build.gradle
+++ b/Android Development MVVM Architecture/app_notes/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     def nav_version = "2.5.3"
     def lifecycle_version = "2.5.1"
     def room_version = "2.4.3"
+    def koin_android_version= "3.3.1"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -62,4 +63,7 @@ dependencies {
     // Room Database
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Koin main features for Android
+    implementation "io.insert-koin:koin-android:$koin_android_version"
 }
