--- a/Marvel App - Kotlin - MVVM - Hilt/app_marvel/app/build.gradle
+++ b/Marvel App - Kotlin - MVVM - Hilt/app_marvel/app/build.gradle
@@ -51,11 +51,9 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Room
-    def room_version = "2.3.0"
-
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
