--- a/Marvel App - Kotlin - MVVM - Hilt/app_marvel/app/src/main/AndroidManifest.xml
+++ b/Marvel App - Kotlin - MVVM - Hilt/app_marvel/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.lvb.projects.app_marvel">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MarvelApplication"
@@ -13,14 +17,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App_marvel"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".ui.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:exported="true">
 
             <meta-data
                 android:name="android.app.lib_name"
