--- a/Full Android Development 2022 - Create 18 Apps/app_video_player/app/src/main/AndroidManifest.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_video_player/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.App_video_player"
         tools:targetApi="31">
         <activity
+            android:name=".PlayerActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
