Finishing app_task_list

--- a/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/AndroidManifest.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_task_list/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.App_task_list"
         tools:targetApi="31">
         <activity
-            android:name=".AddTaskActivity"
+            android:name=".ui.addTask.AddTaskActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
