--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/build.gradle
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/build.gradle
@@ -39,6 +39,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -47,6 +50,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,4 +64,6 @@ dependencies {
 
     // MaterialIntro - Slider
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
+
+    implementation 'com.github.clans:fab:1.6.4'
 }
