--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/AndroidManifest.xml
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/src/main/AndroidManifest.xml
@@ -23,13 +23,7 @@
             android:name=".ui.home.HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.App_organizze.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.App_organizze.NoActionBar" />
         <activity
             android:name=".ui.register.RegisterActivity"
             android:exported="false" />
@@ -39,7 +33,13 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Intro" />
+            android:theme="@style/Theme.Intro" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
