--- a/Full Android Development 2022 - Create 18 Apps/app_organizze/app/build.gradle
+++ b/Full Android Development 2022 - Create 18 Apps/app_organizze/app/build.gradle
@@ -46,12 +46,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -59,11 +59,16 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
 
     // MaterialIntro - Slider
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
 
+    // Floating Action Menu
     implementation 'com.github.clans:fab:1.6.4'
+
+    // Material Calendar View
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+            ''
 }
